# index-tts

./: README.md  app.py  pyproject.toml  start.bat  validate.py  voice_lib_bridge.py  webui.py
cli_tests/: test_cli_v2_batch.py  test_cli_v2_check.py  test_cli_v2_config.py
indextts/: cli_v2.py  infer_v2.py
